# bunker

./: .gitignore  Cargo.toml  README.md  compose.yml
backend/: .env  Cargo.toml  Dockerfile  config.docker.yml  config.yml  entrypoint.sh
backend/.sqlx/: query-5ef6eaab4936d491571447bfb230661b04e6b44a6ecb9feff121d70177b33836.json  query-a86a569be7677d43fe7f265763cf33c011a27ba6e2488761c6ac63413c22781d.json  query-cf6a8cf98c06ade1d14f6f6f957212d1d5244842a6017914e4fe7aaa7ee4afe3.json  query-d169c558df910c04f98627f46d1f0ee4fbbab4c51667ccbcee9cf966ba8db9b1.json  query-fe6944eb144f7c112243193d950167d1736066baf2145c43632b0244c64b3e36.json
backend/migrations/: 20260711202008_create_folders_table.sql  20260711202009_add_folder_id_to_files.sql
backend/src/: configurations.rs  lib.rs  main.rs  startup.rs
backend/src/routes/: files_handler.rs  folders_handler.rs  mod.rs
migrations/: 20260709210220_create_files_table.sql  20260709221423_alter_subscribe_at.sql
src/: startup.rs
src/routes/: files_handler.rs
telemetry/: compose.yml
telemetry/alloy/: config.alloy
web/: .env  .env.example  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.vue  env.d.ts  main.ts  registerServiceWorker.ts  style.css  telemetry.ts
web/src/components/layout/: DriveContent.vue  DriveFileItem.vue  DriveFolderItem.vue  DriveHeader.vue  DriveQuickActions.vue  DriveToolbar.vue  DriveUploadingDrawer.vue
web/src/components/ui/button/: index.ts
web/src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogScrollContent.vue  DialogTitle.vue
web/src/components/ui/drawer/: DrawerOverlay.vue
web/src/components/ui/dropdown-menu/: DropdownMenu.vue  DropdownMenuContent.vue  DropdownMenuGroup.vue  DropdownMenuItem.vue  index.ts  (+3 more)
web/src/lib/: api.ts
web/src/models/: DriveFile.ts  Folder.ts
web/src/plugins/: axios.ts
web/src/repositories/: CachedRepository.ts  DriveFileRepository.ts  FolderRepository.ts
web/src/router/: index.ts
web/src/stores/: orm.ts
web/src/types/: drive.ts
web/src/views/: FolderView.vue  Home.vue
(+2 files in other folders)
