[package]
name = "bunker"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunker"
path = "src/lib.rs"


[[bin]]
name = "bunker"
path = "src/main.rs"

[dependencies]
actix-web = "4.14.0"
config = "0.15.25"
env_logger = "0.11.11"
log = "0.4.33"
serde = {version = "1.0.228", features = ["derive"]}
sqlx = {version = "0.9.0", features = [
    "postgres",                  # Enables Postgres driver and PgPool
    "runtime-tokio",             # Choose your async runtime (or runtime-async-std)
    "tls-rustls-ring-webpki",    # Choose your TLS backend
    "macros",                    # Enables compile-time SQL verification SQLx macros
    
    # --- Optional Postgres Data Type Integrations ---
    "uuid",                      # Supports native Postgres UUID columns
    "chrono",                    # Supports Postgres Timestamps via chrono crate
    "json"                       # Supports JSON and JSONB via serde_json
]}
tokio = {version = "1.52.3", features = ["full"]}
